--- a/src/assets/sass/contact.scss
+++ b/src/assets/sass/contact.scss
@@ -5,317 +5,350 @@
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-	:root {
-		/* 13px - 16px */
-		--topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
-		/* 31px - 49px */
-		--headerFontSize: clamp(1.9375rem, 4.5vw, 3.0625rem);
-		--bodyFontSize: 1rem;
+@media only screen and (min-width: 0rem) {
+    #cs-contact-240 {
+        padding: var(--sectionPadding);
 
-		/* 60px - 100px top and bottom */
-		--sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 1rem;
-	}
+        .cs-container {
+            width: 100%;
+            /* changes to 1280px at desktop */
+            max-width: calc(800 / 16 * 1rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
 
-	#cs-contact {
-		font-family: "Roboto", "Arial", sans-serif;
-		padding: var(--sectionPadding);
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            margin: 0 0 calc(32 / 16 * 1rem) 0;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+        }
+    
+        .cs-topper {
+            font-size: var(--topperFontSize);
+            line-height: 1.2em;
+            text-transform: uppercase;
+            text-align: inherit;
+            letter-spacing: .1em;
+            font-weight: 700;
+            color: var(--primary);
+            margin-bottom: calc(4 / 16 * 1rem);
+            display: block;
+        }
+    
+        .cs-title {
+            font-size: var(--headerFontSize);
+            font-weight: 900;
+            line-height: 1.2em;
+            text-align: inherit;
+            max-width: calc(700 / 16 * 1rem);
+            margin: 0 0 calc(16 / 16 * 1rem) 0;
+            color: var(--headerColor);
+            position: relative;
+        }
+    
+        .cs-text {
+            font-size: var(--bodyFontSize);
+            line-height: 1.5em;
+            text-align: inherit;
+            width: 100%;
+            max-width: calc(650 / 16 * 1rem);
+            margin: 0;
+            color: var(--bodyTextColor);
+        }
 
-		.cs-container {
-			width: 100%;
-			/* changes to 1280px at desktop */
-			max-width: calc(800 / 16 * 1rem);
-			margin: auto;
-		}
+        #cs-form-240-240 {
+            width: 100%;
+        }
 
-		.cs-content {
-			width: 100%;
-		}
+        .cs-label {
+            font-size: calc(16 / 16 * 1rem);
+            line-height: 1.5em;
+            font-weight: 700;
+            /* 12px - 20px */
+            margin-bottom: clamp(.75rem, 1.3em, 1.25rem);
+            color: var(--headerColor);
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
+        }
 
-		.cs-topper {
-			text-align: left;
-			/* 8px - 12px */
-			margin-bottom: clamp(0.5rem, 1.4vw, 0.75rem);
-		}
+        .cs-label-message {
+            /* 32px - 48px */
+            margin-bottom: clamp(2rem, 5.3vw, 3rem);
+        }
 
-		.cs-title {
-			text-align: left;
-			max-width: calc(800 / 16 * 1rem);
-		}
+        .cs-input, .cs-textarea {
+            font-size: calc(16 / 16 * 1rem);
+            width: 100%;
+            height: calc(64 / 16 * 1rem);
+            margin-top: calc(4 / 16 * 1rem);
+            padding-left: calc(20 / 16 * 1rem);
+            border: 1px solid #B4B2C7;
+            border-radius: calc(8 / 16 * 1rem);
+            /* prevents border & padding from affecting height */
+            box-sizing: border-box;
+            transition: border .3s;
 
-		.cs-text {
-			text-align: left;
-			/* 404px - 522px */
-			max-width: clamp(25.25rem, 30vw, 32.625rem);
-			margin: 0 auto 0 0;
-			/* 40px - 48px */
-			margin-bottom: clamp(2.5rem, 6.3vw, 3rem);
-		}
+            &:hover {
+                border: 1px solid var(--primary);
+            }
+        }
 
-		#cs-form {
-			margin-bottom: calc(40 / 16 * 1rem);
-			label {
-				font-size: calc(16 / 16 * 1rem);
-				line-height: 1.5em;
-				font-weight: 700;
-				/* 12px - 20px */
-				margin-bottom: clamp(0.75rem, 1.3em, 1.25rem);
-				color: var(--headerColor);
-				display: flex;
-				justify-content: center;
-				align-items: flex-start;
-				flex-direction: column;
-			}
+        .cs-textarea {
+            font-family: inherit;
+            margin: 0;
+            padding-top: calc(20 / 16 * 1rem);
+            min-height: calc(120 / 16 * 1rem);
+        }
 
-			.cs-label-message {
-				/* 32px - 48px */
-				margin-bottom: clamp(2rem, 6.3vw, 3rem);
-			}
+        .cs-button-solid {
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+            font-weight: 700;
+            text-align: center;
+            margin: 0;
+            color: #fff;
+            min-width: calc(150 / 16 * 1rem);
+            padding: 0 calc(24 / 16 * 1rem);
+            background-color: var(--primary);
+            border-radius: calc(4 / 16 * 1rem);
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
+        
+            &:before {
+                content: '';
+                position: absolute;
+                height: 100%;
+                width: 0%;
+                background: #000;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                border-radius: calc(4 / 16 * 1rem);
+                transition: width .3s;
+            }
+        
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
+        }
 
-			input,
-			textarea {
-				font-size: calc(16 / 16 * 1rem);
-				width: 100%;
-				height: calc(64 / 16 * 1rem);
-				margin-top: calc(4 / 16 * 1rem);
-				padding-left: calc(20 / 16 * 1rem);
-				border: 1px solid #b4b2c7;
-				border-radius: calc(8 / 16 * 1rem);
-				/* prevents border & padding from affecting height */
-				box-sizing: border-box;
-				transition: border 0.3s;
+        .cs-submit {
+            width: 100%;
+            border: none;
+            border-radius: calc(8 / 16 * 1rem);
+        }
 
-				&:hover {
-					border: 1px solid var(--primary);
-				}
-			}
+        .cs-right-section {
+            position: relative;
+            width: 100%;
+            /* 24px - 40px top & bottom */
+            /* 20px - 40px left & right */
+            padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
+            /* prevents padding from affecting height and width */
+            box-sizing: border-box;
+            border-radius: calc(20 / 16 * 1rem);
+            background-color: var(--bodyTextColorWhite);
+            /* cuts off corners on img tag */
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-end;
+            /* 28px - 40px */
+            gap: clamp(1.75rem, 4vw, 2.5rem);
+        }
 
-			textarea {
-				font-family: inherit;
-				padding-top: calc(20 / 16 * 1rem);
-				min-height: calc(120 / 16 * 1rem);
-			}
+        .cs-ul {
+            padding: 0;
+            margin: 0;
+        }
 
-			.cs-button-solid {
-				width: 100%;
-				border: none;
-			}
-		}
+        .cs-li {
+            list-style: none;
+            /* 16px - 20px */
+            margin-bottom: clamp(1rem, 2vw, 1.25rem);
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
 
-		.cs-right-section {
-			position: relative;
-			height: calc(320 / 16 * 1rem);
-			/* 24px - 40px top & bottom */
-			/* 20px - 40px left & right */
-			padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
-			border-radius: calc(8 / 16 * 1rem);
-			/* cuts off corners on img tag */
-			overflow: hidden;
-			display: flex;
-			flex-direction: column;
-			align-items: flex-start;
-			justify-content: flex-end;
-		}
+            &:hover {
+                .cs-icon-wrapper {
+                    transform: scale(1.2);
+                }
+            }
 
-		.cs-header {
-			/* 16px - 20px */
-			font-size: clamp(1rem, 3vw, 1.25rem);
-			line-height: 1.2em;
-			font-weight: 700;
-			margin-bottom: calc(8 / 16 * 1rem);
-			color: var(--bodyTextColorWhite);
-			display: block;
-		}
+            &:last-of-type {
+                margin-bottom: 0;
+            }
+        }
 
-		.cs-link {
-			/* 16px - 20px */
-			font-size: clamp(1rem, 3vw, 1.25rem);
-			line-height: 1.2em;
-			text-decoration: none;
-			margin-bottom: calc(20 / 16 * 1rem);
-			color: var(--bodyTextColorWhite);
-			display: block;
-			position: relative;
+        .cs-header {
+            /* 16px - 20px */
+            font-size: clamp(1rem, 2vw, 1.25rem);
+            font-weight: 700;
+            line-height: 1.2em;
+            margin-bottom: calc(8 / 16 * 1rem);
+            color: var(--headerColor);
+            display: block;
+        }
 
-			&:before {
-				/* Animated underline */
-				content: "";
-				width: 0%;
-				height: 2px;
-				/* current color of the parent */
-				background: currentColor;
-				opacity: 1;
-				position: absolute;
-				display: block;
-				bottom: calc(-2 / 16 * 1rem);
-				left: 0;
-				transition: width 0.3s;
-			}
+        .cs-link {
+            /* 16px - 20px */
+            font-size: clamp(1rem, 2vw, 1.25rem);
+            line-height: 1.2em;
+            text-decoration: none;
+            color: var(--bodyTextColor);
+            position: relative;
 
-			&:hover {
-				&:before {
-					width: 100%;
-				}
-			}
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
 
-			&:last-of-type {
-				margin-bottom: 0;
-			}
-		}
+            &:before {
+                /* top right box */
+                content: '';
+                width: 0%;
+                height: 2px;
+                /* current color of parent */
+                background: currentColor;
+                opacity: 1;
+                position: absolute;
+                display: block;
+                bottom: 0;
+                left: 0;
+                transition: width .3s;
+            }
+        }
 
-		.cs-block {
-			/* sends second address line to the bottom on its own line */
-			display: block;
-		}
+        .cs-icon-wrapper {
+            width: calc(64 / 16 * 1rem);
+            height: calc(64 / 16 * 1rem);
+            /* 16px - 20px */
+            margin-right: clamp(1rem, 2vw, 1.25rem);
+            background-color: #fff;
+            box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.05);
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* prevents flexbox from squishing it */
+            flex: none;
+            transition: transform .3s;
+        }
 
-		.cs-bg-picture {
-			width: 100%;
-			height: 100%;
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: -1;
-			transition: transform 0.6s;
+        .cs-icon {
+            /* 32px -36px */
+            width: clamp(2rem, 3vw, 2.25rem);
+            height: auto;
+            display: block;
+        }
 
-			&:before {
-				/* background color overlay */
-				content: "";
-				position: absolute;
-				display: block;
-				height: 100%;
-				width: 100%;
-				background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
-				top: 0;
-				left: 0;
-				z-index: 1;
-			}
+        .cs-picture {
+            width: 100%;
+            border-radius: calc(8 / 16 * 1rem);
+            /* clips image corners */
+            overflow: hidden;
+            display: block;
+            position: relative;
+            /* width divided height */
+            aspect-ratio: calc(288 / 200);
+        }
 
-			img {
-				position: absolute;
-				top: 0;
-				left: 0;
-				height: 100%;
-				width: 100%;
-				/* Makes img tag act as a background image */
-				object-fit: cover;
-			}
-		}
-	}
+        .cs-img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
 }
 
 /* Tablet - 700px */
-@media only screen and (min-width: 43.75em) {
-	#cs-contact {
-		#cs-form {
-			display: flex;
-			justify-content: space-between;
-			align-items: flex-start;
-			flex-wrap: wrap;
+@media only screen and (min-width: 43.75rem) {
+    #cs-contact-240 {
+        #cs-form-240-240 {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
 
-			label {
-				width: 48%;
-			}
+        .cs-label {
+            width: 48%;
+        }
 
-			.cs-label-message {
-				width: 100%;
-			}
-		}
-	}
+        .cs-label-message {
+            width: 100%;
+        }
+
+        .cs-button-solid {
+            margin-left: 0;
+        }
+
+        .cs-right-section {
+            flex-direction: row;
+            align-items: center;
+        }
+    }
 }
 
 /* Small Desktop - 1024px */
-@media only screen and (min-width: 64em) {
-	#cs-contact {
-		.cs-container {
-			max-width: calc(1280 / 16 * 1rem);
-			display: flex;
-			justify-content: flex-end;
-			align-items: flex-start;
-			gap: calc(80 / 16 * 1rem);
-		}
+@media only screen and (min-width: 64rem) {
+    #cs-contact-240 {
+        .cs-container {
+            max-width: calc(1280 / 16 * 1rem);
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: flex-start;
+            /* 60px - 108px */
+            gap: clamp(3.75rem, 5.9vw + 2em, 6.75rem);
+        }
 
-		#cs-form {
-			max-width: calc(630 / 16 * 1rem);
-			label {
-				width: 100%;
-			}
-		}
+        .cs-left-section {
+            max-width: calc(522 / 16 * 1rem);
+        }
 
-		.cs-right-section {
-			/* changes to 578px at 1300px wide */
-			height: calc(686 / 16 * 1rem);
-			width: 40%;
-			max-width: calc(542 / 16 * 1rem);
-			/* prevents flexbox from squishing it */
-			flex: none;
+        .cs-label {
+            width: 100%;
+        }
 
-			&:hover {
-				.cs-bg-picture {
-					transform: scale(1.1);
-				}
-			}
-		}
+        .cs-right-section {
+            width: 40vw;
+            max-width: calc(630 / 16 * 1rem);
+            /* prevents flexbox from squishing it */
+            flex: none;
+            flex-direction: column;
+            align-items: flex-start;
+        }
 
-		.cs-block {
-			/* goes back to inline so it stays "in line" with the rest of the text */
-			display: inline-block;
-		}
-	}
+        .cs-picture {
+            width: 100%;
+            max-width: 100%;
+            height: calc(438 / 16 * 1rem);
+        }
+    }
 }
-
-/* Small Desktop - 1300px */
-@media only screen and (min-width: 81.25em) {
-	#cs-contact {
-		#cs-form {
-			column-gap: calc(0 / 16 * 1rem);
-			label {
-				width: 48%;
-				max-width: calc(305 / 16 * 1rem);
-			}
-
-			.cs-label-message {
-				max-width: 100%;
-			}
-		}
-
-		.cs-right-section {
-			height: calc(578 / 16 * 1rem);
-		}
-	}
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-	body.dark-mode {
-		#cs-contact {
-			.cs-text,
-			.cs-title {
-				color: var(--bodyTextColorWhite);
-			}
-
-			#cs-form {
-				label,
-				input,
-				textarea {
-					background-color: transparent;
-					color: var(--bodyTextColorWhite);
-
-					&::placeholder {
-						/* lighten up the color of the text by 40%*/
-						filter: brightness(1.4);
-					}
-				}
-			}
-
-			.cs-bg-picture {
-				background-color: #000;
-
-				img {
-					/* lets parent background-color bleed through and darken it */
-					opacity: 0.5;
-				}
-			}
-		}
-	}
-}
+                                
