--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -2,76 +2,91 @@
 <!--                   Footer                     -->
 <!-- ============================================ -->
 
-<footer id="footer">
-    <div class="container">
-        <div class="left-section">
-            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/svgs/logo-white.svg" alt="logo" width="264" height="78"></a>
-            <p>
-                Extra content if you need it, if not you can delete this whole p tag. I usually do.
+<footer id="cs-footer-841">
+ <div class="cs-container">
+        <!-- Logo Group -->
+        <div class="cs-logo-group">
+            <a aria-label="go back to home" class="cs-logo" href="index.html">
+                <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/websitelogo.png" alt="logo" width="240" height="32">
+            </a>
+            <p class="cs-text">
+                Select Snap N Sweet as your premier photobooth company and elevate every event to excellence. Our team delivers exceptional craftsmanship, skillfully transforming spaces to capture picture-perfect moments with precision. 
             </p>
-        </div>
-        <div class="right-section">
-            <div class="lists">
-                <ul>
-                    <li>
-                        <h2>Information</h2>
-                    </li>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/about">About Us</a>
-                    </li>
-                    <li>
-                        <a href="/projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/testimonials">Reviews</a>
-                    </li>
-                    <li>
-                        <a href="/contact">Contact</a>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Services</h2>
-                    </li>
-                    <li>Service1</li>
-                    <li>Service2</li>
-                    <li>Service4</li>
-                    <li>Service5</li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Contact</h2>
-                    </li>
-                    <li>
-                        <a href="/contact">
-                            {{client.address.lineOne}}<br>
-                            {{client.address.lineTwo}}<br>
-                            {{client.address.city}}
-                            {{client.address.state}}
-                            {{client.address.zip}}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="tel:{{client.phoneForTel}}">
-                            T:
-                            {{client.phoneFormatted}}
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:{{client.email}}">Click to Email</a>
-                    </li>
-                </ul>
+            <div class="cs-social">
+                <a class="cs-social-link" aria-label="visit instagram profile" href="https://www.instagram.com/snapnsweet/">
+                    <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Ftwitter-grey1.svg" alt="instagram" width="11" height="11">
+                </a>
             </div>
         </div>
+        <!-- Links -->
+        <div class="cs-ul-wrapper">
+            <span class="cs-header">Quick Links</span>
+            <ul class="cs-ul cs-ul-1">
+                <li class="cs-li">
+                    <a class="cs-link" href="index.html">Home</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="about.html">About</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="wedding.html">Wedding</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="corporate.html">Corporate</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="social.html">Parties</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="gallery.html">Gallery</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="contact_us.html">Contact</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="blog.html">Blog</a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="booking.html">Book Now</a>
+                </li>
+            </ul>
+        </div>
+        <div class="cs-ul-wrapper">
+            <!-- Contact Info -->
+            <span class="cs-header">Contact Information</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    <!--Make this link go to the google page-->
+                    <a class="cs-link" href="https://www.google.com/search?q=snapnsweet&sxsrf=AB5stBiFhRJ0Id6T_hSa0dDSH34N2DQBUQ%3A1690813062875&ei=hsLHZMSPNeOJptQPxJu5kAM&ved=0ahUKEwjE6vm_kbmAAxXjhIkEHcRNDjIQ4dUDCBA&uact=5&oq=snapnsweet&gs_lp=Egxnd3Mtd2l6LXNlcnAiCnNuYXBuc3dlZXQyBBAjGCcyBBAjGCcyBBAjGCcyBxAAGIAEGAoyBxAAGIAEGAoyBxAAGIAEGAoyBxAAGIAEGApIkQdQ9QNY9QNwAXgBkAEAmAGAAaABgAGqAQMwLjG4AQPIAQD4AQHCAgcQIxiwAxgnwgIKEAAYRxjWBBiwA-IDBBgAIEGIBgGQBgk&sclient=gws-wiz-serp#lrd=0x89d4d38a146c408b:0x34df31ebdcc2dfe3,1,,,," target="_blank">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fclock-grey.svg" alt="clock icon" width="20" height="20">
+                        M-F 8am – 9:30pm
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="tel:647-779-7369">
+                        <img class="cs-contact-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fphone-grey.svg" alt="phone icon" width="20" height="20">
+                        647-779-7369
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <a class="cs-link" href="mailto:info@snapnsweet.ca">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fmessage-grey.svg" alt="email icon" width="20" height="20">
+                        info@snapnsweet.ca
+                    </a>
+                </li>
+                <li class="cs-li">
+                    <!--Make this link go to the google page-->
+                    <a class="cs-link" href="https://www.google.com/search?q=snapnsweet&sxsrf=AB5stBiFhRJ0Id6T_hSa0dDSH34N2DQBUQ%3A1690813062875&ei=hsLHZMSPNeOJptQPxJu5kAM&ved=0ahUKEwjE6vm_kbmAAxXjhIkEHcRNDjIQ4dUDCBA&uact=5&oq=snapnsweet&gs_lp=Egxnd3Mtd2l6LXNlcnAiCnNuYXBuc3dlZXQyBBAjGCcyBBAjGCcyBBAjGCcyBxAAGIAEGAoyBxAAGIAEGAoyBxAAGIAEGAoyBxAAGIAEGApIkQdQ9QNY9QNwAXgBkAEAmAGAAaABgAGqAQMwLjG4AQPIAQD4AQHCAgcQIxiwAxgnwgIKEAAYRxjWBBiwA-IDBBgAIEGIBgGQBgk&sclient=gws-wiz-serp#lrd=0x89d4d38a146c408b:0x34df31ebdcc2dfe3,1,,,," target="_blank">
+                        <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fpin-grey.svg" alt="pin icon" width="20" height="20">
+                        53 Kenfin Ave, Scarborough, ON M1S 4E8
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <div class="credit">
-        <span>Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Your Company Name</a>
-        <span class="copyright">
-            Copyright 2023 - Present</span>
+    <div class="cs-bottom">
+        <span class="cs-credit">
+            © Copyright 2023 <a href="index.html" class="cs-credit-link" target="_blank">Enigma Digital</a>
+        </span>
     </div>
 </footer>
