--- a/src/assets/sass/reviews.scss
+++ b/src/assets/sass/reviews.scss
@@ -1,131 +1,298 @@
-/* PAGE-SPECIFIC STYLES FOR THE REVIEWS PAGE */
+/* PAGE-SPECIFIC STYLES FOR THE Gallery PAGE */
 
 /*-- -------------------------- -->
-<---           Reviews          -->
+<---          Gallery           -->
 <--- -------------------------- -*/
-
-/* Mobile */
-@media only screen and (min-width: 0em) {
-	#reviews {
-		padding-top: calc(120 / 16 * 1rem);
-		padding-bottom: calc(50 / 16 * 1rem);
-		margin: auto;
-
-		.container {
-			width: 96%;
-			max-width: calc(1320 / 16 * 1rem);
-		}
-
-		.review {
-			padding: calc(64 / 16 * 1rem) calc(30 / 16 * 1rem) calc(18 / 16 * 1rem) calc(30 / 16 * 1rem);
-			box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
+/* Mobile - 360px */
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 0rem) {
+	#gallery-379 {
+		padding: var(--sectionPadding);
+		.cs-container {
 			width: 100%;
-			max-width: calc(410 / 16 * 1rem);
 			margin: auto;
-			margin-bottom: calc(100 / 16 * 1rem);
-			border-radius: calc(5 / 16 * 1rem);
-			position: relative;
-			background: #fff;
 			display: flex;
 			flex-direction: column;
-			&:last-of-type {
-				margin-bottom: 0;
-			}
-
-			.profile {
-				display: block;
-				height: calc(99 / 16 * 1rem);
-				width: calc(99 / 16 * 1rem);
-				margin-left: 0;
-				border-radius: 50%;
-				margin-bottom: calc(16 / 16 * 1rem);
-				position: absolute;
-				left: calc(30 / 16 * 1rem);
-				top: calc(-51 / 16 * 1rem);
-			}
-
-			p {
-				line-height: 24/18;
-				margin-bottom: calc(28 / 16 * 1rem);
-				text-align: left;
-			}
-
-			.star-group {
-				border-top: 1px solid #e7e7e7;
-				padding-top: calc(16 / 16 * 1rem);
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
-				flex-wrap: nowrap;
-				margin-top: auto;
-
-				.name {
-					color: #1a1a1a;
-					line-height: calc(24 / 16 * 1rem);
-					text-align: left;
-					font-weight: bold;
-					display: block;
-				}
-
-				.desc {
-					color: #575757;
-					font-weight: 400;
-					display: block;
-				}
-
-				img {
-					display: block;
-					width: calc(91 / 16 * 1rem);
-					height: calc(15 / 16 * 1rem);
-					margin: 0;
-				}
-			}
+			align-items: center;
+			gap: clamp(3rem, 6vw, 4rem);
 		}
-	}
-}
-
-/* Tablet */
-@media only screen and (min-width: 48em) {
-	#reviews {
-		padding-top: calc(150 / 16 * 1rem);
-		padding-bottom: calc(50 / 16 * 1rem);
-
-		.container {
-			font-size: min(1.4vw, 1em);
+		.cs-content {
+			text-align: center;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.cs-topper {
+			font-size: var(--topperFontSize);
+			line-height: 1.2em;
+			text-transform: uppercase;
+			text-align: inherit;
+			letter-spacing: .1em;
+			font-weight: 700;
+			color: var(--primary);
+			margin-bottom: 0.25rem;
+			display: block;
+		}
+		.cs-title {
+			font-size: var(--headerFontSize);
+			font-weight: 900;
+			line-height: 1.2em;
+			text-align: inherit;
+			max-width: 43.75rem;
+			margin: 0 0 1rem 0;
+			color: var(--headerColor);
+			position: relative;
+		}
+		.cs-text {
+			font-size: var(--bodyFontSize);
+			line-height: 1.5em;
+			text-align: inherit;
+			width: 100%;
+			max-width: 40.625rem;
+			margin: 0;
+			color:  var(--bodyTextColor);
+		}
+		.cs-gallery {
+			padding: 0;
+			margin: 0;
 			display: flex;
 			justify-content: center;
+			align-items: center;
 			flex-wrap: wrap;
-			padding: 0;
-			column-gap: calc(30 / 16 * 1rem);
+			gap: clamp(1rem, 1.5vw, 1.25rem);
 		}
-
-		.review {
-			margin: 0;
-			margin-bottom: calc(150 / 16 * 1rem);
-
-			&:last-of-type {
-				margin-bottom: calc(150 / 16 * 1rem);
+		.cs-image {
+			border-radius: 1.25rem;
+			width: 100%;
+			max-width: 15rem;
+			height: clamp(18.75rem, 30vw, 25rem);
+			aspect-ratio: 1;
+			img {
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				object-fit: cover;
 			}
 		}
 	}
 }
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-	body.dark-mode {
-		#reviews {
-			.review {
-				background: var(--medium);
-
-				.name {
-					color: #fff;
-				}
-
-				.desc {
-					color: #fff;
-					opacity: 0.7;
-				}
-			}
+@media only screen and (min-width: 64rem) {
+	#gallery-379 {
+		.cs-image {
+			width: 100%;
+			max-width: 15rem;
+			height: clamp(18.75rem, 30vw, 25rem);
+			aspect-ratio: 1;
 		}
 	}
 }
+
+/*-- -------------------------- -->
+<---            CTA             -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #cta-1072 {
+        padding: var(--sectionPadding);
+        background-color: var(--primary);
+        position: relative;
+        z-index: 1;
+        
+        .cs-container {
+            width: 100%;
+            max-width: calc(1280 / 16 * 1rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: center;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-flex {
+            max-width: calc(630 / 16 * 1rem);
+        }
+
+        .cs-topper {
+            font-size: var(--topperFontSize);
+            line-height: 1.2em;
+            text-transform: uppercase;
+            text-align: inherit;
+            letter-spacing: .1em;
+            font-weight: 700;
+            color: var(--secondary);
+            margin-bottom: calc(4 / 16 * 1rem);
+            display: block;
+        }
+    
+        .cs-title {
+            font-size: var(--headerFontSize);
+            font-weight: 900;
+            line-height: 1.2em;
+            text-align: inherit;
+            max-width: calc(700 / 16 * 1rem);
+            margin: 0 0 calc(16 / 16 * 1rem) 0;
+            color: var(--headerColor);
+            position: relative;
+        }
+
+        .cs-title {
+            margin: 0;
+            /* Override.  cs-topper cs-title and first cs-text should be removed and put into your global css sheet so it can control every instance of them on your site and is consistent. This selector is a section specific override that stays inside this stitch */
+            color: var(--bodyTextColorWhite);
+        }
+
+        .cs-button-box {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: calc(16 / 16 * 1rem);
+        }
+    
+        .cs-button-solid {
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+	    	font-weight: 700;
+	        text-align: center;
+            margin: 0;
+            color: #fff;
+            min-width: calc(150 / 16 * 1rem);
+            padding: 0 calc(24 / 16 * 1rem);
+            background-color: var(--primary);
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
+
+            &:before {
+                content: '';
+                position: absolute;
+                height: 100%;
+                width: 0%;
+                background: #000;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width .3s;
+            }
+
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
+        }
+
+        .cs-button-transparent {
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+	    	font-weight: 700;
+	        text-align: center;
+            margin: 0;
+            color: #fff;
+            min-width: calc(150 / 16 * 1rem);
+            padding: 0 calc(24 / 16 * 1rem);
+            background-color: transparent;
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
+            transition: color .3s;
+
+            &:before {
+                content: '';
+                position: absolute;
+                height: 100%;
+                width: 0%;
+                background: #fff;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width .3s;
+            }
+
+            &:after {
+                /* border */
+                content: '';
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                background-color: transparent;
+                /* prevents padding from adding to the width */
+                box-sizing: border-box;
+                border: 1px solid #fff;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width .3s;
+                pointer-events: none;
+            }
+
+            &:hover {
+                color: var(--primary);
+                &:before {
+                    width: 100%;
+                }
+            }
+        }
+
+        .cs-background {
+            width: 100%;
+            height: 100%;
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+
+            &:before {
+                /* background color overlay */
+                content: '';
+                position: absolute;
+                display: block;
+                height: 100%;
+                width: 100%;
+                background: #1a1a1a;
+                opacity: .88;
+                top: 0;
+                left: 0;
+                z-index: 1;
+            }
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                /* Makes img tag act as a background image */
+                object-fit: cover;
+            }
+        }
+    }
+}
+                                
