hopefully final change

--- a/src/_includes/layouts/base2.html
+++ b/src/_includes/layouts/base2.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="/css/dark.css">
     <script defer src="/assets/js/nav.js"></script>
     <script defer src="/assets/js/dark.js"></script>
+    <script defer src="/assets/js/faq.js"></script>
 
     {% block head %}{% endblock %}
 
