--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -1,5 +1,5 @@
 <!-- ============================================ -->
-<!--                 Navigation  1                -->
+<!--                 Navigation                   -->
 <!-- ============================================ -->
 
 <header id="cs-navigation">
@@ -18,43 +18,72 @@
                     <span class="cs-line cs-line3" aria-hidden="true"></span>
                 </div>
             </button>
-              <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
-            <!-- This also allows for easy substitution of CodeStitch navigations. Just replace the .cs-ul-wrapper in the new navigation with this one -->
+            <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
-                    {% set navPages = collections.all | eleventyNavigation %}
-                    <!-- Loop through all pages with a eleventyNavigation in the frontmatter -->
-                    {% for entry in navPages %}
-                        <!-- Define a hasChild variable to make it easier to test what links are dropdowns-->
-                        {% set hasChild = entry.children.length %}
+                    <li class="cs-li">
+                        <a href="/index" class="cs-li-link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="cs-li">
+                        <a href="/about" class="cs-li-link            
+                            {{ 'cs-active' if 'about' == page.fileSlug}}
+                            ">
+                            About
+                        </a>
+                    </li>
+                    <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
+                    <li class="cs-li cs-dropdown" tabindex="0">
+                        <span class= "cs-li-link
+                            {{ 'cs-active' if 'Weddings' == page.fileSlug}}
+                            {{ 'cs-active' if 'Corporate' == page.fileSlug}}
+                            {{ 'cs-active' if 'Social' == page.fileSlug}}
+                            ">
 
-                        <!-- If this page is a dropdown, give it the appropriate classes, icons and accessibility attributes-->
-                        <li class="cs-li {% if hasChild %} cs-dropdown {% endif %}" {% if hasChild %} tabindex="0"{% endif %}>
-
-                            <!-- Similarly, if the link is active, apply the necessary classes -->
-                            <a href="{{ entry.url }}" class="cs-li-link {% if entry.url == page.url %} cs-active {% endif %}">
-                                {{ entry.key }}
-                                {% if hasChild %}
-                                    <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
-                                {% endif %}
-                            </a>
-
-                            <!-- Dropdowns have another ul/li set up within the parent li. Render in the same way as a normal link -->
-                            {% if hasChild %}
-                                <ul class="cs-drop-ul">
-                                    {% for child in entry.children %}
-                                        <li class="cs-drop-li">
-                                            <a href="{{ child.url }}" class="cs-li-link cs-drop-link">{{ child.key }}</a>
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            {% endif %}
-                        </li>
-                    {% endfor %}
+                            Services
+                            <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-gold.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                        </span>
+                        <ul class="cs-drop-ul">
+                            <li class="cs-drop-li">
+                                <a href="/weddings" class="cs-li-link cs-drop-link">Weddings</a>
+                            </li>
+                            <li class="cs-drop-li">
+                                <a href="/corporate" class="cs-li-link cs-drop-link">Corporate Events</a>
+                            </li>
+                             <li class="cs-drop-li">
+                                <a href="/social" class="cs-li-link cs-drop-link">Social Activites</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="cs-li">
+                        <a href="/gallery" class="cs-li-link   {{ 'cs-active' if 'Gallery' == page.fileSlug}}
+                            ">
+                            Gallery
+                        </a>
+                    </li>
+                    <li class="cs-li">
+                        <a href="/blog" class="cs-li-link   {{ 'cs-active' if 'blog' == page.fileSlug}}
+                            ">
+                            Blog
+                        </a>
+                    </li>
+                    <li class="cs-li">
+                        <a href="/contact" class="cs-li-link   {{ 'cs-active' if 'contact' == page.fileSlug}}
+                            ">
+                            Contact Us
+                        </a>
+                    </li>
+                      <li class="cs-li hidden">
+                        <a href="/Booking" class="cs-li-link   {{ 'cs-active' if 'Booking' == page.fileSlug}}
+                            ">
+                            Book Now
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
-        <a href="/Booking" class="cs-button-solid cs-nav-button">Book Now</a>
+        <a href="/booking" class="cs-button-solid cs-nav-button">Book Now</a>
         <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
             <svg class="cs-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
