--- a/src/assets/sass/local2.scss
+++ b/src/assets/sass/local2.scss
@@ -805,6 +805,18 @@
     align-items: center;
     z-index: 100;
   }
+  .hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
+  
   #cs-navigation .cs-logo img {
     width: 100%;
     height: 100%;
